tests/base/invalid/Return_CompileFail_9.whiley
import whiley.lang.*:*

void f(int x):
    return x
